# OpenAlexFileDownloader

./: .gitignore  README.md  get_paper_details_csv.py  main.py  oa_papers.csv  oa_papers_with_filenames.csv  openalex_file_downloader.py  pyproject.toml  unsuccessful_urls.txt
